fixed horizontal scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,6 @@ img {
 
 header {
 	width: 100%;
-	margin: 10px;
 }
 
 .logo {
